--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 								  </div>
 
 								<div class="skill-mf">
-									<p class="title-s">Skills</p>
+									<p  style="color: burlywood; font-size: x-large;" class="title-s">Skills</p>
 									<span>Java</span> <span class="pull-right">95%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
