--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 						// Create an array of typing text
 						const typingTexts = [ 
-						'A Full Stack Developver',
+						'A Full Stack Developer',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -185,7 +185,7 @@
 
 						<br>
 						<br>
-			            <!-- <h2>A  Full Stack Developver</h2> -->
+			            <!-- <h2>A  Full Stack Developer</h2> -->
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/shriniwas-chavan-67906a34a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="btn btn-primary py-3 px-4">Linkedln</a> 
