--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="https://docs.google.com/document/d/1GEuqTLEry4ArNNau2V-DnjHqnaqZkwI-/edit">resumelink</a></p>
 	          </div>
           </div>
 
